--- a/IoTLight/app/src/main/AndroidManifest.xml
+++ b/IoTLight/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         </activity>
 
-        <activity android:name=".View.WarnningNotification">
+        <activity android:name=".View.WarningNotification">
 
         </activity>
         <activity android:name=".View.LoginApp">
